--- a/ATI-xorg.conf
+++ b/ATI-xorg.conf
@@ -32,9 +32,12 @@ Section "Device"
 	Driver      "fglrx"
 	Option	    "TexturedVideo" "off"
 	Option	    "AccelMethod" "EXA"
+    Option      "EXAVSync" "off"
+    Option	    "EXAPixmaps" "off"
 	Option	    "EnablePageFlip" "on"
 	Option	    "AccelDFS" "on"  #default is off, read the radeon manpage for more information
 	Option      "OpenGLOverlay" "on"
+    Option      "ColorTiling" "on"
 	Option	    "Capabilities" "0x00000800"
 	BusID       "PCI:1:0:0"
 EndSection
